fix connection problems between js and html files (also investigating Date object in js).

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="build/css/vendor.css" rel="stylesheet" type="text/css">
     <script src="build/js/vendor.min.js"></script>
     <script type="text/javascript" src="build/js/app.js"></script>
     <title>Years Per Planet</title>
   </head>
   <body>
-    <form id="birth-date-form">
-      <label for="dob">Enter a date:</label>
-      <input id="dob" type="number">
+    <form id="years-per-planet-form">
+      <label for="dateOfBirth">Enter your date of birth:</label>
+      <input id="dateOfBirth" type="date">
       <button type="submit">Submit</button>
     </form>
-    <ul id="result"></ul>
+    <p id="result"></p>
   </body>
 </html>
