fix karma.conf.js to work with es6. (i.e. after hours of trying testing finally works and the world is slightly less cruel than I thought)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <form id="years-per-planet-form">
       <label for="dateOfBirth">Enter your date of birth:</label>
       <input id="dateOfBirth" type="date">
+      <label for="lifeExpectancy">Enter the average lifepan in your area</label>
+      <input id="lifeExpectancy" type="number">      
       <button type="submit">Submit</button>
     </form>
     <p id="result"></p>
